# almost-legal-speed

./: .gitignore  CMakeLists.txt  GameLogic.cpp  GameLogic.h  GameState.cpp  GameState.h  LevelImporter.cpp  LevelImporter.h  MenuLogic.cpp  MenuLogic.h  Player.cpp  Player.h  Powerup.h  README.md  Renderer.cpp  Renderer.h  level_importer.cpp  level_importer.h  main.cpp  startgame.sh
gfx/: Matzario_jump_right.piskel
levels/: level00  level01  level02  level03  level04  level_design
modules/: LICENSE
shaders/: brainfreeze.frag
